unpackaged/main/default/objects/T1_Competitor__c/T1_Competitor__c.object-meta.xml
<CustomObject>
    <description>System Vendors also used for T1 competitors lookup</description>
    <label>System Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Vendors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>