unpackaged/main/default/objects/T1_Competitor__c/fields/Code_Id__c.field-meta.xml
<CustomField>
    <fullName>Code_Id__c</fullName>
    <externalId>true</externalId>
    <label>Code Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>