unpackaged/main/default/objects/T1_Competitor__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Management</fullName>
            </value>
            <value>
                <fullName>Business Intelligence</fullName>
            </value>
            <value>
                <fullName>Business Process Management</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Corporate Performance Management</fullName>
            </value>
            <value>
                <fullName>Enterprise Content Management</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>Human Resources and Payroll</fullName>
            </value>
            <value>
                <fullName>Property and Rating</fullName>
            </value>
            <value>
                <fullName>Stakeholder Management</fullName>
            </value>
            <value>
                <fullName>Student Management</fullName>
            </value>
            <value>
                <fullName>Supply Chain Management</fullName>
            </value>
            <value>
                <fullName>Spacial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>