unpackaged/main/default/objects/T1_Competitor__c/fields/Products_String__c.field-meta.xml
<CustomField>
    <fullName>Products_String__c</fullName>
    <formula>IF(INCLUDES( Products__c, &quot;Asset Management&quot;), &quot;Asset Management ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;Business Intelligence&quot;), &quot;Business Intelligence ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;Cloud&quot;), &quot;Cloud ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;Corporate Performance Management&quot;), &quot;Corporate Performance Management ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;Customer Relationship Management&quot;), &quot;Customer Relationship Management ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;EDRMS&quot;), &quot;EDRMS ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;eMinisterial&quot;), &quot;eMinisterial ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;Enterprise Cash Receipting&quot;), &quot;Enterprise Cash Receipting ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;Enterprise Content Management&quot;), &quot;Enterprise Content Management ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;Financials&quot;), &quot;Financials ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;Grants Management&quot;), &quot;Grants Management ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;Human Resources and Payroll&quot;), &quot;Human Resources and Payroll ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;P/Planning&quot;), &quot;P/Planning ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;Property And Rating&quot;), &quot;Property And Rating ; &quot; , &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;Student Management&quot;), &quot;Student Management ; &quot;, &quot;&quot; ) + 
IF(INCLUDES( Products__c, &quot;Supply Chain Management&quot;), &quot;Supply Chain Management ; &quot; , &quot;&quot;)</formula>
    <label>Products String</label>
    <type>Text</type>
</CustomField>