unpackaged/main/default/objects/T1_Competitor__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <label>Strengths</label>
    <type>TextArea</type>
</CustomField>