unpackaged/main/default/objects/T1_Competitor__c/listViews/All_System_Vendors.listView-meta.xml
<ListView>
    <fullName>All_System_Vendors</fullName>
    <columns>NAME</columns>
    <columns>Products__c</columns>
    <columns>Strengths__c</columns>
    <columns>Weaknesses__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All System Vendors</label>
</ListView>